update: reformat swagger
